--- a/src/i18n/MM.json
+++ b/src/i18n/MM.json
@@ -424,6 +424,7 @@
     "msgVersionChange": "ဗားရှင်းမှာ ပြောင်းလဲပြီးပါပြီ။",
     "msgNoCreate": "PO အတွက် ထုတ်ပို့စာရွက်ဖန်တီးရန် သို့မဟုတ် BOM ဖန်တီးရန်အတွက် ပစ္စည်းအားလုံးကို ပြန်လည်ပေးအပ်ရန်လိုအပ်သည်။",
     "btnGuide": "လမ်းညွှန်ချက်",
-    "msgStockOut": "သင့်အနေဖြင့် ပစ္စည်းများကို ထုတ်ပို့လိုသည်မှာ သေချာပါသလား?"
+    "msgStockOut": "သင့်အနေဖြင့် ပစ္စည်းများကို ထုတ်ပို့လိုသည်မှာ သေချာပါသလား?",
+    "lblupdate_inforWH": "ကုန်သိုလှောင်ရုံအချက်အလက် ပြင်ဆင်ခြင်"
 
 }
