--- a/src/i18n/VN.json
+++ b/src/i18n/VN.json
@@ -455,5 +455,8 @@
     "msgVersionChange": "Phiên bản có thay đổi",
     "msgNoCreate": "Bạn phải tạo phiếu xuất cho PO hoặc trả lại hết vật tư để tạo BOM",
     "btnGuide": "Hướng dẫn",
-    "msgStockOut": "Bạn có chắc chắn muốn xuất vật tư?"
+    "msgStockOut": "Bạn có chắc chắn muốn xuất vật tư?",
+    "lblupdate_inforWH": "Cập nhật thông tin WH"
+  
+
 }
